# Bezier

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: vertex_shader.glsl
src/: bezierCurve.h  bezierSurface.h  camera.h  cube.h  glad.c  glad.h  main.cpp
